Finally got the progress bar to behave correctly. Also added buttons more aligned with UX. Not removing the old sprint/break buttons because I don't want to lose that logic and have to do it over again.

--- a/src/views/Timer/timer-styles.css
+++ b/src/views/Timer/timer-styles.css
@@ -63,13 +63,15 @@ p {
     font-weight: 600;
 }
 
-/* .CircularProgressbar {
-   
+.timer {
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
-text.CircularProgressbar-text {
-    fill: white;
-} */
+i {
+    color: #6487FF;
+    font-size: 50px;
+}
 
 @media screen and (max-width:500px) {
     .buttons {
